2008-01-04  Jens Georg  <mail@jensge.org>

	reviewed by: Johannes Schmid <jhs@gnome.org>

	* plugins/run-program/execute.c (get_local_executable),
	(get_local_directory):
	* plugins/run-program/parameters.c (on_add_uri_in_model),
	(on_add_directory_in_chooser), (save_dialog_data),
	(run_dialog_init):
	* plugins/run-program/plugin.c:

2008-01-04  Jens Georg  <mail@jensge.org>
 
 	* plugins/subversion/plugin.c: 
 	#511589 – Anjuta uses GNOME-VFS 

2009-01-04  James Liggett  <jrliggett@cox.net>

	* plugins/subversion/subversion-add-dialog.c
	(on_subversion_add_response):
	* plugins/subversion/subversion-remove-dialog.c
	(on_subversion_remove_response):
	* plugins/subversion/svn-add-command.c (svn_add_command_finalize),
	(svn_add_command_run), (svn_add_command_new_path),
	(svn_add_command_new_list):
	* plugins/subversion/svn-add-command.h:
	* plugins/subversion/svn-remove-command.c
	(svn_remove_command_finalize), (svn_remove_command_run),
	(svn_remove_command_new_path), (svn_remove_command_new_list),
	(svn_remove_command_destroy):
	* plugins/subversion/svn-remove-command.h:
	
	Extend Subversion Add/Remove commands to take both individual paths and 
	path lists.

2009-01-04 Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/action-callbacks.c
	(on_bookmark_add_activate), (on_bookmark_next_activate),
	(on_bookmark_prev_activate), (on_bookmarks_clear_activate):
	* plugins/document-manager/action-callbacks.h:
	* plugins/document-manager/anjuta-bookmarks.c (line_compare),
	(get_bookmarks_for_editor), (anjuta_bookmarks_next),
	(anjuta_bookmarks_prev), (anjuta_bookmarks_clear):
	* plugins/document-manager/anjuta-bookmarks.h:
	* plugins/document-manager/anjuta-document-manager.ui:
	* plugins/document-manager/plugin.c (register_stock_icons):
	
	Added menuitems for add/next/prev/clear bookmark. Bookmark interface is now
	complete again

2009-01-04  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/Makefile.am:
	Added log domain for document-manager
	